Class documentation and minor refactorings